# triton

./: .pre-commit-config.yaml  pyproject.toml
docs/: conf.py
python/: pyproject.toml  setup.py
python/examples/: copy_strided.py
python/src/: ir.cc  llvm.cc
python/test/backend/: test_device_backend.py
python/test/regression/: test_cast_matmul.py  test_functional_regressions.py
python/test/unit/: test_debug.py  test_perf_warning.py
python/test/unit/hopper/: test_experimental_tma.py  test_flashattention.py  test_gemm.py  test_gemm_fusion.py  test_tma_store_gemm.py
python/test/unit/instrumentation/: test_gpuhello.py
python/test/unit/language/: print_helper.py  test_annotations.py  test_block_pointer.py  test_compile_errors.py  test_core.py  test_decorator.py  (+8 more)
python/triton/: __init__.py  _internal_testing.py  _utils.py  testing.py
python/triton/backends/: __init__.py  compiler.py  driver.py
python/triton/compiler/: __init__.py  code_generator.py  compiler.py  errors.py
python/triton/language/: __init__.py  core.py  math.py  random.py  semantic.py  standard.py
python/triton/runtime/: _allocation.py  autotuner.py  build.py  cache.py  driver.py  errors.py  interpreter.py  jit.py
python/triton/tools/: build_extern.py  compile.py  disasm.py  experimental_descriptor.py  link.py
python/tutorials/: 01-vector-add.py  02-fused-softmax.py  03-matrix-multiplication.py  04-low-memory-dropout.py  05-layer-norm.py  06-fused-attention.py  07-extern-functions.py  08-grouped-gemm.py  09-persistent-matmul.py
test/: lit.cfg.py
utils/: generate-test-checks.py
(+11 files in other folders)
